# syntax

./: .buildinfo  .coveragerc.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  api.html  autodoc.html  conftest.py  directives.html  example.html  genindex.html  index.html  objects.inv  pyproject.toml  pytest.toml  quickstart.html  roles.html  search.html  searchindex.js  settings.html  sphinx-a4doc.html
.github/: dependabot.yml
.github/workflows/: ci.yaml
_sources/: autodoc.rst.txt  roles.rst.txt  settings.rst.txt
_static/: documentation_options.js  railroad-diagrams.css  syntax-diagrams-ext.css
docs/: Makefile
docs/source/: api.rst  autodoc.rst  conf.py  directives.rst  example.rst  index.rst  quickstart.rst  roles.rst  settings.rst
docs/source/_extensions/: yacc_hl.py
docs/source/example/: Calc.y  Json.g4
pr-preview/pr-4/: .buildinfo  genindex.html  index.html  objects.inv  search.html
pr-preview/pr-4/_static/: documentation_options.js
pr-preview/pr-5/: .buildinfo  genindex.html  index.html  objects.inv  search.html
pr-preview/pr-5/_static/: documentation_options.js
pr-preview/pr-6/: .buildinfo  api.html  autodoc.html  directives.html  example.html  genindex.html  index.html  objects.inv  quickstart.html  roles.html  search.html  searchindex.js  settings.html  sphinx-a4doc.html
pr-preview/pr-6/_sources/: directives.rst.txt  index.rst.txt  sphinx-a4doc.rst.txt
pr-preview/pr-6/_static/: documentation_options.js  syntax-diagrams.css
sphinx_railroad_diagrams/: __init__.py
sphinx_syntax/: __init__.py  api.py  autodoc.py  diagram.py  domain.py  model.py  model_renderer.py  reachable_finder.py
sphinx_syntax/antlr/model/: impl.py  model.py  model_renderer.py  reachable_finder.py  visitor.py
sphinx_syntax/antlr/syntax/: __init__.py  lexer_adaptor.py
sphinx_syntax/ext/: utils.py
sphinx_syntax/ext/antlr4/: __init__.py  sphinx_a4doc_convert.py
sphinx_syntax/ext/bison/: __init__.py
sphinx_syntax/ext/syntax/: ANTLRv4Lexer.g4  ANTLRv4LexerBase.py.in  ANTLRv4Parser.g4  BisonLexer.g4  BisonLexerBase.py.in  BisonParser.g4  LexBasic.g4  run_gen.py
sphinx_syntax/static/: syntax-diagrams.css
test/: conftest.py  test_regression.py
test/roots/test-doc/: conf.py  index.rst
test/roots/test-doc/grammars/: Bison.y  Lexer.g4
test/roots/test-doc/src/: audodoc-bison.rst  audodoc-filter.rst  audodoc-lexer.rst  audodoc-rule.rst  diagram-opt.rst  diagram-override.rst  diagram-refs.rst  diagram-resolver-data.rst  diagram-settings.rst  diagrams.rst  invalid-yaml.rst  objects.rst  ref-targets.rst  refs.rst  root-rule.rst
test/test_regression/: doc-audodoc-bison.html  doc-audodoc-lexer.html  doc-audodoc-rule.html  doc-diagram-opt.html  doc-diagram-override.html  doc-diagram-refs.html  doc-diagram-resolver-data.html  doc-diagram-settings.html  doc-diagrams.html  doc-objects.html  doc-refs.html  doc-root-rule.html
typings/antlr4/: ParserRuleContext.pyi
typings/antlr4/tree/: Tree.pyi
