[project]
name = "sphinx-railroad-diagrams"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "A library for generating railroad syntax diagrams in Sphinx"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Software Development :: Documentation",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed",
]
dependencies = [
    "neat-railroad-diagrams~=0.0",
    "sphinx>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov==6.2.1",
    "sphinx-railroad-diagrams[test,lint,doc]",
]
test = [
    "pyright==1.1.404",
    "pytest==8.4.1",
    "sybil==9.2.0",
]
lint = [
    "black==25.1.0",
    "isort==6.0.1",
    "pre-commit==4.3.0",
]
doc = [
    "sybil==9.2.0",
    "furo==2025.7.19",
    "sphinx_design==0.6.1",
]

[project.urls]
Documentation = "https://sphinx-railroad-diagrams.readthedocs.io/en/stable/"
Issues = "https://github.com/taminomara/sphinx-railroad-diagrams/issues"
Source = "https://github.com/taminomara/sphinx-railroad-diagrams/"
Changelog = "https://github.com/taminomara/sphinx-railroad-diagrams/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "sphinx_railroad_diagrams/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "sphinx_railroad_diagrams", "docs"]

[tool.pyright]
include = ["sphinx_railroad_diagrams"]
exclude = ["**/__pycache__"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

# deprecateTypingAliases = true
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.black]
extend-exclude = '^/docs'

[tool.isort]
profile = "black"
extend_skip_glob = ["docs/*"]
skip_gitignore = true
