[project]
name = "sphinx-syntax"
authors = [{name = "Tamika Nomara", email = "taminomara@gmail.com"}]
description = "A Sphinx plugin for documenting grammars"
dynamic = ["version"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed",
]
dependencies = [
    "syntax-diagrams>=1.0.0,<2.0",
    "sphinx>=8.0,<10.0",
    "PyYAML>=6.0,<7.0",
    "antlr4-python3-runtime>=4.13,<4.14",
]

[dependency-groups]
dev = [
    "pytest-cov==7.0.0",
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "doc"},
]
test = [
    "pyright==1.1.407",
    "pytest==9.0.2",
    "sybil==9.3.0",
    "pytest-regressions==2.9.1",
    "beautifulsoup4==4.14.3"
]
lint = [
    "black==25.12.0",
    "isort==7.0.0",
    "pre-commit==4.5.1",
]
doc = [
    "sybil==9.3.0",
    "furo==2025.12.19",
    "sphinx_design==0.7.0",
    "sphinxcontrib-svg2pdfconverter[CairoSVG]==1.3.0",
]

[project.urls]
Documentation = "https://sphinx-syntax.readthedocs.io/en/stable/"
Issues = "https://github.com/sphinx-contrib/syntax/issues"
Source = "https://github.com/sphinx-contrib/syntax/"
Changelog = "https://github.com/sphinx-contrib/syntax/blob/main/CHANGELOG.md"


[build-system]
requires = ["setuptools>=60", "setuptools_scm[toml]>=8", "wheel>=0.40"]

[tool.setuptools_scm]
write_to = "sphinx_syntax/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["--strict-markers", "-p no:doctest"]
testpaths = ["test", "sphinx_syntax", "docs"]

[tool.pyright]
include = ["sphinx_syntax"]
exclude = ["**/__pycache__", "sphinx_syntax/ext/syntax/gen/*"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
pythonPlatform = "All"

reportMissingParameterType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.black]
force-exclude = '/sphinx_syntax/ext/syntax/gen/.*'

[tool.isort]
profile = "black"
extend_skip_glob = ["/sphinx_syntax/ext/syntax/gen/*"]
skip_gitignore = true
